src/test/ui/span/issue-37767.stderr
error[E0034]: multiple applicable items in scope
  --> $DIR/issue-37767.rs:10:7
   |
LL |     a.foo()
   |       ^^^ multiple `foo` found
   |
note: candidate #1 is defined in the trait `A`
  --> $DIR/issue-37767.rs:2:5
   |
LL |     fn foo(&mut self) {}
   |     ^^^^^^^^^^^^^^^^^
   = help: to disambiguate the method call, write `A::foo(&a)` instead
note: candidate #2 is defined in the trait `B`
  --> $DIR/issue-37767.rs:6:5
   |
LL |     fn foo(&mut self) {}
   |     ^^^^^^^^^^^^^^^^^
   = help: to disambiguate the method call, write `B::foo(&a)` instead

error[E0034]: multiple applicable items in scope
  --> $DIR/issue-37767.rs:22:7
   |
LL |     a.foo()
   |       ^^^ multiple `foo` found
   |
note: candidate #1 is defined in the trait `C`
  --> $DIR/issue-37767.rs:14:5
   |
LL |     fn foo(&self) {}
   |     ^^^^^^^^^^^^^
   = help: to disambiguate the method call, write `C::foo(&a)` instead
note: candidate #2 is defined in the trait `D`
  --> $DIR/issue-37767.rs:18:5
   |
LL |     fn foo(&self) {}
   |     ^^^^^^^^^^^^^
   = help: to disambiguate the method call, write `D::foo(&a)` instead

error[E0034]: multiple applicable items in scope
  --> $DIR/issue-37767.rs:34:7
   |
LL |     a.foo()
   |       ^^^ multiple `foo` found
   |
note: candidate #1 is defined in the trait `E`
  --> $DIR/issue-37767.rs:26:5
   |
LL |     fn foo(self) {}
   |     ^^^^^^^^^^^^
   = help: to disambiguate the method call, write `E::foo(a)` instead
note: candidate #2 is defined in the trait `F`
  --> $DIR/issue-37767.rs:30:5
   |
LL |     fn foo(self) {}
   |     ^^^^^^^^^^^^
   = help: to disambiguate the method call, write `F::foo(a)` instead

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0034`.
